--- a/client/src/styles/_smui-theme.scss
+++ b/client/src/styles/_smui-theme.scss
@@ -1,5 +1,12 @@
 @import "@material/typography/mdc-typography";
 
+$mdc-theme-primary: #050505;
+$mdc-theme-secondary: #3F3F3F;
+$mdc-theme-on-primary: #D4D4D4;
+$mdc-theme-on-secondary: #807F80;
+// $mdc-theme-surface: red;
+
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
